<resources>
    <string name="app_name">ping connects</string>
    <string name="sample_title">ChatKit for Android</string>
    <string name="facebook_app_id">364926627662826</string>
    <string name="fb_login_protocol_scheme">fb364926627662826</string>
    <string name="view">View</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="content_description">Content Description</string>
    <string name="hint_enter_a_message">Chat…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_right_to_browse_members">Swipe Right To Browse Members.</string>
    <string name="tap_here_to_begin">TAP HERE TO BEGIN</string>
    <string name="swipe_left_to_delete_members_and">Swipe Left To Delete Members And</string>
    <string name="registration_complete">REGISTRATION COMPLETE</string>
    <string name="frequently_asked_questions">FREQUENTLY ASKED QUESTIONS</string>
    <string name="how_can_i_edit_my_profile">HOW CAN I EDIT MY PROFILE?</string>
    <string name="go_to_settings_scroll_down_to_edit_profile">Go to Settings, scroll down to Edit Profile.</string>
    <string name="i_forgot_my_password">I FORGOT MY PASSWORD</string>
    <string name="go_to_edit_profile_page_and_reset_password">Go to Edit Profile page and reset Password.</string>
    <string name="how_can_i_delete_my_account">HOW CAN I DELETE MY ACCOUNT?</string>
    <string name="go_to_settings_scroll_down_to_delete_account">Go to Settings, scroll down to DELETE ACCOUNT.</string>
    <string name="what_happens_when_i_swipe_left">WHAT HAPPENS WHEN I SWIPE LEFT?</string>
    <string name="swiping_left_will_delete_members">Swiping left will delete Members.</string>
    <string name="what_happens_when_i_swipe_right">WHAT HAPPENS WHEN I SWIPE RIGHT?</string>
    <string name="swiping_right_allows_you_to_continuously_browse_members">Swiping right allows you to continuously browse Members.</string>
    <string name="i_have_messages_how_do_i_view_them">I HAVE MESSAGES. HOW DO I VIEW THEM?</string>
    <string name="click_on_settings_and_go_into_messages">Click on Settings and go into Messages.</string>
    <string name="how_do_i_disable_sound_from_the_app">HOW DO I DISABLE SOUND FROM THE APP?</string>
    <string name="go_into_your_settings_on_your_phone_and_click_on_the_ping_icon_click_on_notifications_then_click_on_sounds_to_disable_sounds">Go into your settings on your phone and click on the ping icon. Click on Notifications, then click on Sounds to disable sounds.</string>
</resources>