<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.signin.CompletionActivity">

    <ImageView
        android:contentDescription="@string/content_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/new_3" />

    <ImageView
        android:contentDescription="@string/content_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/img_logo_light"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
        android:contentDescription="@string/content_description"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_correct_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:elevation="8dp"
            android:fontFamily="@font/ubuntu_m"
            android:textSize="22sp"
            android:text="@string/registration_complete"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        android:background="#CCF92442">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_b"
            android:textSize="15sp"
            android:text="@string/swipe_left_to_delete_members_and"
            android:textColor="#FFFFFF"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/beginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:cardElevation="5dp"
            app:cardCornerRadius="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_b"
                android:textSize="17sp"
                android:text="@string/tap_here_to_begin"
                android:textColor="#FE0025"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_b"
            android:textSize="15sp"
            android:text="@string/swipe_right_to_browse_members"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</FrameLayout>