<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".fragment.FaqFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:gravity="center">

            <ImageView
            android:contentDescription="@string/content_description"
                android:id="@+id/menuButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_menu"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_marginStart="28dp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/red">

            <TextView
                android:id="@+id/badgeTextView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text=""
                android:textSize="10sp"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:contentDescription="@string/content_description"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/img_logo"
            android:scaleType="centerInside"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_r"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/frequently_asked_questions"
            android:textColor="#000000"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/how_can_i_edit_my_profile"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/go_to_settings_scroll_down_to_edit_profile"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/i_forgot_my_password"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/go_to_edit_profile_page_and_reset_password"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/how_can_i_delete_my_account"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/go_to_settings_scroll_down_to_delete_account"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/what_happens_when_i_swipe_left"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/swiping_left_will_delete_members"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/what_happens_when_i_swipe_right"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/swiping_right_allows_you_to_continuously_browse_members"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/i_have_messages_how_do_i_view_them"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/click_on_settings_and_go_into_messages"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="17sp"
                            android:text="@string/how_do_i_disable_sound_from_the_app"
                            android:textColor="#999999"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/ubuntu_r"
                            android:layout_gravity="start"
                            android:textSize="15sp"
                            android:text="@string/go_into_your_settings_on_your_phone_and_click_on_the_ping_icon_click_on_notifications_then_click_on_sounds_to_disable_sounds"
                            android:textColor="#000000"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>